--- a/header.html
+++ b/header.html
@@ -1,12 +1,10 @@
 <!-- header.html: Notebook-specific CSS and title -->
 <style>
 .this_nb_title {
-    font-weight: bold;
-    color: steelblue;
-    background-color: transparent;
-    font-size: 22px;
-    border: 0px;
-    padding: 0px;
+    color: white;
+    background-color: #1E3A8A;
+    font-size: 16px;
+    font-weight: strong;
 }
 .selmono {
     font-family: "Lucida Console", Monaco, monospace !important;
@@ -20,4 +18,4 @@
     min-width: 1200px !important;
 }
 </style>
-<span class="this_nb_title">Land-Ocean Temperature Index</span>
+<!-- <span class="this_nb_title">AgMIP Model Submission</span> -->
