--- a/style.html
+++ b/style.html
@@ -11,7 +11,8 @@
     --light-grey: #D3D3D3;
 }
 
-/* Style basic HTML elements */
+
+/*** Style basic HTML elements ***/
 
 .selmono {
     font-family: "Lucida Console", Monaco, monospace !important;
@@ -24,8 +25,23 @@ hr{
                               parent instead. */
 }
 
-/* CSS classes for custom components. To avoid name clashes with the existing classes used by ipywidgets, 
-   their names are prepended with "c" for "custom". The name also follows BEM convention. */
+
+/*** CSS classes for custom components. 
+   
+   To avoid name clashes with the existing classes used by ipywidgets, 
+   their names are prepended with "c" for "custom". The name also follows BEM convention. 
+***/
+
+/* Text colors */
+.c-text-light-grey {
+    color: var(--grey);
+}
+.c-text-grey {
+    color: var(--grey);
+}
+.c-text-white{
+    color: white);
+}
 
 /* Header bar */
 .c-header-bar {
@@ -80,7 +96,62 @@ hr{
     color: var(--light-grey);
 }
 
-/* Extend CSS classes used by native ipywidgets components */
+/* File upload area */
+.c-upload-area {
+    background: transparent;
+    width: 500px;
+    height: 200px;
+    position: relative;
+}
+.c-upload-area__background,
+.c-upload-area__overlay-button {
+    width: 99%;     /*99%, instead of 100%, to avoid overflow*/
+    height: 99%;
+    background: transparent;
+    border-radius: 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    align-self: center;
+}
+.c-upload-area__background {
+    color: var(--grey);
+    border: 1px dashed var(--grey);
+    display: flex !important;
+    flex-flow: column nowrap !important;
+    align-items: center !important;
+    justify-content: center !important;        
+}
+.c-upload-area__overlay-button {
+    z-index: 10;
+}
+.c-upload-area__overlay-button:hover {
+    box-shadow: none !important;
+}
+.c-upload-area__overlay-button:active {
+    background: transparent;
+    color: grey;
+    outline: none !important;
+}
+.c-upload-area__overlay-button:focus {
+    box-shadow: none !important;
+    outline: none !important;
+}
+
+/*** Extend CSS classes used by native ipywidgets components ***/
+
+div.output_subarea {
+    padding: 0px 0px;   /* Prevent display("style.html") or other "empty" display() from taking up screen space */
+}
+
+div.output_area {
+    justify-content: center !important;     /* Position the component being displayed at the center of the 
+                                               output area */
+}
+
+.widget-box {
+    height: 
+}
 
 .widget-html-content {
     /* These attributes were unset because they mess up flex stylings for ui.HTML components */
@@ -88,6 +159,9 @@ hr{
     flex-shrink: unset !important;
     flex-grow: unset !important;
 }
+
+/*The following modification were made by the scsa project, which this project is based on*/
+
 .widget-select > select {
     font-family: monospace !important;
 }
