--- a/script.html
+++ b/script.html
@@ -49,7 +49,7 @@
 		/**
 		 * Upload selected file to Jupyter notebook server
 		 *
-		 * This function uses the upload API exposed by Jupyter notebook server. The signature of the API is
+		 * This function uses the file upload API exposed by Jupyter notebook server. The signature of the API is
 		 * <NB_SERVER_BASE_URL>/api/contents/<FILE_DESTINATION_PATH>
 		 *
 		 * To use the API:
@@ -58,27 +58,18 @@
 		 *  3. Break a large file into smaller chunks (and upload them separately)
 		 *
 		 * Exception:
-		 *  When using a Jupyter notebook on MyGeoHub, the client is not directly communicating with the notebook's
-		 *  server. Instead, the comunication is done through a middleware.
+		 *  When using a Jupyter notebook on MyGeoHub, API requests to the notebook server will reach a middleware
+		 * 	first. The middleware will handle authentication (through cookies) and redirect the request to the server. 
 		 *
-		 *  E.g.
-		 *  A request from client to https://proxy.mygeohub.org/weber/{}/{}/{}/notebooks/notebook.ipynb will reach a
-		 *  middleware instead of the actual notebook server. The middleware will then redirect the request to
-		 *  the notebook server.
-		 *
-		 *  When performing the redirection, the middleware will also handle the authenticity of the client
-		 *  request (through cookies).
-		 *
-		 *  One consequence of this is that, when calling the file upload API from a notebook on MyGeoHub, step 1
-		 *  mentioned above can be skipped.
+		 *  As a consequence, when calling the file upload API from a notebook on MyGeoHub, step 1 mentioned above is 
+		 *  not needed.
 		 */
 
 		var file = this.files[0];
 		if (!file) return;
 
 		this.disabled = true;
-		document.body.style.cursor = "progress";
-
+		document.body.classList.add("c-cursor-mod--progress")
 		// Encode file in Base64 (by reading it as a Data URL)
 		let reader = new FileReader();
 		reader.readAsDataURL(file);
@@ -98,16 +89,16 @@
 				let http = new XMLHttpRequest();
 				http.open("PUT", url, true);
 
-				// The Python application is expected to define NOTEBOOK_AUTH_TOKEN before loading this script file
-				// However, this code can be removed before deployment to MyGeoHub 
+				// NOTEBOOK_AUTH_TOKEN is defined in view.py & this code can be removed before deployment to MyGeoHub 
 				http.setRequestHeader("Authorization", "token " + NOTEBOOK_AUTH_TOKEN);
 
 				http.send(JSON.stringify(payload));
 
-				if (i == chunks.length - 1) {			// After sending the last payload
+				// Reset state after sending the last payload
+				if (i == chunks.length - 1) {			
 					http.onreadystatechange = function () {
 						if (http.readyState === XMLHttpRequest.DONE) {
-							document.body.style.cursor = "default";
+							document.body.classList.remove("c-cursor-mod--progress")
 							document.getElementById("c-file-uploader").disabled = false;
 						}
 					};
